--- a/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
@@ -56,7 +56,7 @@
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
         <h:outputStylesheet name="css/animate.css" library="spark-layout" />
         <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
-        <h:outputStylesheet name="css/invessence.css" library="spark-layout" />
+        <h:outputStylesheet name="css/invessence.css" library="invessence" />
     </h:body>
 
 </html>
