--- a/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
@@ -10,7 +10,7 @@
         <div id="layout-topbar-indent">
             <a href="#{menu.defaultHome}">
                 <h:graphicImage name="#{menu.logo}" alt="#{menu.logoAlt}"
-                                styleClass="Fleft" library="spark-layout" id="logo" class="Fleft"/>
+                                styleClass="Fleft" library="invessence" id="logo" class="Fleft"/>
             </a>
 
             <ui:fragment rendered="#{menu.isUserLoggedInMenu}">
