--- a/invessence/modules/web/src/main/webapp/template/common/ltamlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/ltamlayout.xhtml
@@ -5,56 +5,72 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
-    <h:head>
-        <f:facet name="first">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-            <meta name="apple-mobile-web-app-capable" content="yes" />
-        </f:facet>
-        <title>iAdvice</title>
-        <h:outputScript name="js/layout.js" library="spark-layout" />
-
-        <ui:insert name="head" />
-    </h:head>
+<h:head>
+    <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+    </f:facet>
+    <title>iAdvice</title>
 
     <f:metadata>
         <f:viewParam name="cid" value="#{menu.cid}"/>
         <f:event type="preRenderView" listener="#{menu.preRenderView}"/>
     </f:metadata>
 
-    <h:body>    
-        <ui:include src="/template/common/ltamtopbar.xhtml" />
+    <h:outputScript name="js/ripple-effect.js" library="modena-layout" />
+    <h:outputScript name="js/perfect-scrollbar.js" library="modena-layout" />
+    <h:outputScript name="js/layout.js" library="modena-layout" />
 
-        <div id="layout-portlets-cover">
-            <ui:insert name="content">
-                Template
-            </ui:insert>
+    <ui:insert name="head" />
 
-            <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontRalewayRegular">iAdvice  |   All rights reserved.</span>
+</h:head>
+
+<h:body class="GrayModena Geometry">
+
+    <ui:include src="ltamtopbar.xhtml" />
+
+    <div id="wrapper">
+        <div id="wrapperIndent">
+
+            <div id="layout-portlets-cover">
+                <div class="Container96 Fnone MarAuto">
+
+                    <ui:insert name="content">
+                        Template
+                    </ui:insert>
+
+                    <!-- footer -->
+                    <div class="Container100">
+                        <div class="ContainerIndent TexAlCenter Fs14 BoldGray">
+                            iAdvice  |  All Rights Reserved.
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
+            <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
+                <f:facet name="start">
+                    <p:graphicImage name="images/preloader.gif" library="modena-layout"/>
+                </f:facet>
+
+                <f:facet name="complete">
+                    <h:outputText value="" />
+                </f:facet>
+            </p:ajaxStatus>
         </div>
+    </div>
 
-<!--
-        <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
-            <f:facet name="start">
-                <p:graphicImage name="images/preloader.gif" library="spark_layout"/>
-            </f:facet>
-
-            <f:facet name="complete">
-                <h:outputText value="" />
-            </f:facet>
-        </p:ajaxStatus>
--->
-
-        <h:outputStylesheet name="css/core-layout.css" library="spark-layout" />
-        <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
-        <h:outputStylesheet name="css/animate.css" library="spark-layout" />
-        <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
-        <h:outputStylesheet name="css/invessence.css" library="spark-layout" />
-        <h:outputStylesheet name="css/ltam.css" library="ltam"/>
-
-    </h:body>
+    <h:outputStylesheet name="css/core-layout.css" library="modena-layout" />
+    <h:outputStylesheet name="css/animate.css" library="modena-layout" />
+    <h:outputStylesheet name="css/modena-font.css" library="modena-layout" />
+    <h:outputStylesheet name="css/ripple-effect.css" library="modena-layout" />
+    <h:outputStylesheet name="css/perfect-scrollbar.css" library="modena-layout" />
+    <h:outputStylesheet name="css/font-awesome.css" library="modena-layout" />
+    <h:outputStylesheet name="css/modena-layout.css" library="modena-layout" />
+    <h:outputStylesheet name="css/ltam.css" library="ltam" />
+</h:body>
 
 </html>
