--- a/invessence/modules/iAdvice/src/main/webapp/resources/museo-layout/css/modena-layout.css
+++ b/invessence/modules/iAdvice/src/main/webapp/resources/museo-layout/css/modena-layout.css
@@ -30,15 +30,18 @@
     format('truetype');
 }
 
-.FontRobotoLight {
-  font-family: 'robotolight';
+.FontMuseoLight {
+  font-family: 'Museo-300';
 }
-.FontRobotoRegular {
-  font-family: 'robotoregular';
+
+.FontMuseoRegular {
+  font-family: 'Museo-500';
 }
-.FontRobotoMedium {
-  font-family: 'robotomedium';
+
+.FontMuseoMedium {
+  font-family: 'Museo-700';
 }
+
 /*BODY*/
 html {
   height: 100%;
@@ -48,7 +51,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: #f5f5f5;
-  font-family: 'robotolight';
+  font-family: 'Museo-300';
 }
 /* Gray Theme*/
 .GrayModena.Geometry {
@@ -215,7 +218,7 @@ body {
   display: inline-block;
 }
 #logo img {
-    height: 00px;
+    height: 40px;
     /*margin: 5px 5px 5px 15px;*/
 }
 
@@ -224,7 +227,7 @@ body {
   margin: 0px;
   padding: 0px;
   float: right;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
 }
 #top-menu > li {
   float: left;
@@ -256,7 +259,7 @@ body {
 }
 #top-menu > li > a .Txt {
   display: none;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
 }
 #top-menu li ul {
   width: 200px;
@@ -306,7 +309,7 @@ body {
   border-bottom: solid 1px #465b65;
   padding: 0px;
   width: 140px;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
   font-size: 16px;
   color: #465b65;
 }
@@ -329,7 +332,7 @@ body {
   padding: 15px;
   display: block;
   font-size: 16px;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
 }
 #top-menu li ul li a.active-menu,
 #top-menu li ul li a:hover,
@@ -489,7 +492,7 @@ body {
   width: 88%;
   padding: 18px 6%;
   display: block;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
@@ -508,7 +511,7 @@ body {
   margin-right: 8px;
 }
 .layout-menu li ul li {
-  font-family: 'robotolight';
+  font-family: 'Museo-300';
   font-size: 15px;
 }
 .layout-menu > li ul li a:focus {
@@ -570,12 +573,12 @@ body {
   border-radius: 2px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
   color: #546e7a;
 }
 .CardTopic {
   font-size: 20px;
-  font-family: 'robotolight';
+  font-family: 'Museo-300';
   font-weight: lighter;
   color: #546e7a;
   padding: 0px 0px 10px 0px;
@@ -599,7 +602,7 @@ body {
 .CartText {
   font-size: 12px;
   color: #ffffff;
-  font-family: 'robotoregular';
+  font-family: 'Museo-500';
   background-color: #e53935;
   border-radius: 30px;
   -webkit-border-radius: 30px;
@@ -667,7 +670,7 @@ li {
 }
 .BigTopic {
   font-size: 20px;
-  font-family: 'robotolight';
+  font-family: 'Museo-300';
   font-weight: lighter;
   color: #546E7A;
   padding: 10px 0px;
@@ -799,7 +802,7 @@ li {
     display: block;
     border: 0px none;
     font-size: 15px;
-    font-family: 'robotolight';
+    font-family: 'Museo-300';
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
@@ -948,7 +951,7 @@ li {
     display: block;
     border: 0px none;
     font-size: 15px;
-    font-family: 'robotolight';
+    font-family: 'Museo-300';
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
@@ -1104,7 +1107,7 @@ li {
     display: block;
     border: 0px none;
     font-size: 15px;
-    font-family: 'robotolight';
+    font-family: 'Museo-300';
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
