--- a/invessence/modules/iAdvice/src/main/webapp/resources/opensans-layout/css/modena-font.css
+++ b/invessence/modules/iAdvice/src/main/webapp/resources/opensans-layout/css/modena-font.css
@@ -1,7 +1,17 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@font-face {
+    font-family: "Modena";
+    src:url("#{resource['modena-layout:fonts/Modena.eot']}");
+    src:url("#{resource['modena-layout:fonts/Modena.eot']}#iefix-edmmgb") format("embedded-opentype"),
+    url("#{resource['modena-layout:fonts/Modena.woff']}") format("woff"),
+    url("#{resource['modena-layout:fonts/Modena.ttf']}") format("truetype"),
+    url("#{resource['modena-layout:fonts/Modena.svg']}#modena") format("svg");
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 [class^="icon-"], [class*=" icon-"] {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Modena';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
