--- a/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
@@ -61,6 +61,7 @@
                    rendered="#{uiportal.enableMenu('DEMO')}">
             <p:menuitem value="CTO" outcome="/pages/consumer/cto/cto.xhtml"/>
             <p:menuitem value="Asset" outcome="/pages/advisor/assets.xhtml"/>
+            <p:menuitem value="Yodlee" outcome="/pages/consumer/aggr/main.xhtml"/>
             <p:menuitem value="Reports" icon="fa fa-picture-o"
                         actionListener="#{uiportal.doMenuAction('/consumer/creports.xhtml')}"/>
             <p:menuitem value="Standard Dashboard" outcome="/spark/dashboard.xhtml"/>
