Showcase with Yodlee

--- a/showcase/modules/web-showcase/src/main/webapp/resources/less/theme/theme.less
+++ b/showcase/modules/web-showcase/src/main/webapp/resources/less/theme/theme.less
@@ -1858,7 +1858,7 @@ hr.ui-widget-header{background-color: #E5EBF0; border-width:0px;}
 
 .ui-toolbar .ui-separator{padding:0px 5px; border-bottom:0px none;}
 
-/*Style For Jqplot Charts --------------------------------------------------------------------------------------*/
+/*Style For Jqplot YodleeCharts --------------------------------------------------------------------------------------*/
 
 .jqplot-target{}
 .jqplot-axis {}
