--- a/showcase/modules/web-showcase/src/main/webapp/resources/primefaces-modena/theme.css
+++ b/showcase/modules/web-showcase/src/main/webapp/resources/primefaces-modena/theme.css
@@ -5162,7 +5162,7 @@ hr.ui-widget-header {
   padding: 0px 5px;
   border-bottom: 0px none;
 }
-/*Style For Jqplot Charts --------------------------------------------------------------------------------------*/
+/*Style For Jqplot YodleeCharts --------------------------------------------------------------------------------------*/
 /* ... Styles applied to the 2nd, 3rd, etc. x axis only. */
 /* ... Styles applied to the 2nd, 3rd, etc. y axis only. */
 /*Style For UI Outline --------------------------------------------------------------------------------------*/
