--- a/showcase/modules/web-showcase/src/main/webapp/resources/primefaces-spark-blue/theme.css
+++ b/showcase/modules/web-showcase/src/main/webapp/resources/primefaces-spark-blue/theme.css
@@ -1791,7 +1791,7 @@ font-family: 'titillium_webregular';}
 
 .ui-toolbar .ui-separator{padding:0px 5px;}
 
-/*Style For Jqplot Charts --------------------------------------------------------------------------------------*/
+/*Style For Jqplot YodleeCharts --------------------------------------------------------------------------------------*/
 
 .jqplot-target{}
 .jqplot-axis {}
