--- a/showcase/modules/web-showcase/src/main/webapp/resources/spark-layout/css/core-layout.css
+++ b/showcase/modules/web-showcase/src/main/webapp/resources/spark-layout/css/core-layout.css
@@ -45,9 +45,6 @@ h1, h2, h3, h4, h5, h6{ margin:0px !important;}
     user-select: none;
 }
 
-/* for on iphone safari inputs shadow problem */
-input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; -moz-appearance: none; appearance: none;}
-
 /* Display */
 .DispBlock{ display:block;}
 .DispTable{ display:table; vertical-align:middle;}
@@ -138,6 +135,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 .Wid25{ width:25%;}
 .Wid20{ width:20%;}
 .Wid10{ width:10%;}
+.Wid5{ width:5%;}
 
 .MaxWid500{max-width:500px;}
 
@@ -177,45 +175,48 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 .MarRight10{ margin-right:10px;}
 .MarRight20{ margin-right:20px;}
 
+.MarLeft5{ margin-left:5px;}
+.MarLeft10{ margin-left:10px;}
+.MarLeft20{ margin-left:20px;}
 
 /* Paddings */
 .PaddingTopPercent10{ padding-top: 10%;}
 
 /* Containers */
-.Container100{ width:100%;  float:left;}
-.Container96{ width:96%;  float:left;}
-.Container90{ width:90%;  float:left;}
-.Container85{ width:85%;  float:left;}
-.Container80{ width:80%;  float:left;}
-.Container75{ width:75%;  float:left;}
-.Container70{ width:70%;  float:left;}
-.Container60{ width:60%;  float:left;}
-.Container50{ width:50%;  float:left;}
-.Container40{ width:40%;  float:left;}
-.Container33{ width:33.3%;  float:left;}
-.Container30{ width:30%;  float:left;}
-.Container25{ width:25%;  float:left;}
-.Container20{ width:20%;  float:left;}
-.Container10{ width:10%;  float:left;}
-.Container5{ width:5%;  float:left;}
+.Container100{ width:100%; overflow:hidden; float:left;}
+.Container96{ width:96%; overflow:hidden; float:left;}
+.Container90{ width:90%; overflow:hidden; float:left;}
+.Container85{ width:85%; overflow:hidden; float:left;}
+.Container80{ width:80%; overflow:hidden; float:left;}
+.Container75{ width:75%; overflow:hidden; float:left;}
+.Container70{ width:70%; overflow:hidden; float:left;}
+.Container60{ width:60%; overflow:hidden; float:left;}
+.Container50{ width:50%; overflow:hidden; float:left;}
+.Container40{ width:40%; overflow:hidden; float:left;}
+.Container33{ width:33.3%; overflow:hidden; float:left;}
+.Container30{ width:30%; overflow:hidden; float:left;}
+.Container25{ width:25%; overflow:hidden; float:left;}
+.Container20{ width:20%; overflow:hidden; float:left;}
+.Container10{ width:10%; overflow:hidden; float:left;}
+.Container5{ width:5%; overflow:hidden; float:left;}
 
-.ContainerIndent{ display:block; margin:0px auto;}
-.Container100 .ContainerIndent{ display:block; margin:0px auto; width:98%; padding:0.1% 1%;}
-.Container96 .ContainerIndent{ display:block; margin:0px auto; width:98%; padding:0.2% 1%;}
-.Container90 .ContainerIndent{ display:block; margin:0px auto; width:97.6%; padding:0.2% 1.2%;}
-.Container85 .ContainerIndent{ display:block; margin:0px auto; width:97.4%; padding:0.6% 1.3%;}
-.Container80 .ContainerIndent{ display:block; margin:0px auto; width:97.2%; padding:0.5% 1.4%;}
-.Container75 .ContainerIndent{ display:block; margin:0px auto; width:97%; padding:0.7% 1.5%;}
-.Container70 .ContainerIndent{ display:block; margin:0px auto; width:96.8%; padding:0.8% 1.6%;}
-.Container60 .ContainerIndent{ display:block; margin:0px auto; width:96.6%; padding:1% 1.7%;}
-.Container50 .ContainerIndent{ display:block; margin:0px auto; width:96.2%; padding:1% 1.9%;}
-.Container40 .ContainerIndent{ display:block; margin:0px auto; width:95.6%; padding:1.5% 2.2%;}
-.Container33 .ContainerIndent{ display:block; margin:0px auto; width:94.4%; padding:1.7% 2.8%;}
-.Container30 .ContainerIndent{ display:block; margin:0px auto; width:94.2%; padding:1.7% 2.9%;}
-.Container25 .ContainerIndent{ display:block; margin:0px auto; width:93.2%; padding:2% 3.4%;}
-.Container20 .ContainerIndent{ display:block; margin:0px auto; width:92%; padding:2% 4%;}
-.Container10 .ContainerIndent{ display:block; margin:0px auto; width:82%; padding:2% 9%;}
-.Container5 .ContainerIndent{ display:block; margin:0px auto; width:64%; padding:3% 18%;}
+.ContainerIndent{overflow:hidden; display:block; margin:0px auto;}
+.Container100 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:98%; padding:0.1% 1%;}
+.Container96 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:98%; padding:0.2% 1%;}
+.Container90 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:97.6%; padding:0.2% 1.2%;}
+.Container85 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:97.4%; padding:0.6% 1.3%;}
+.Container80 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:97.2%; padding:0.5% 1.4%;}
+.Container75 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:97%; padding:0.7% 1.5%;}
+.Container70 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:96.8%; padding:0.8% 1.6%;}
+.Container60 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:96.6%; padding:1% 1.7%;}
+.Container50 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:96.2%; padding:1% 1.9%;}
+.Container40 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:95.6%; padding:1.5% 2.2%;}
+.Container33 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:94.4%; padding:1.7% 2.8%;}
+.Container30 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:94.2%; padding:1.7% 2.9%;}
+.Container25 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:93.2%; padding:2% 3.4%;}
+.Container20 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:92%; padding:2% 4%;}
+.Container10 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:82%; padding:2% 9%;}
+.Container5 .ContainerIndent{overflow:hidden; display:block; margin:0px auto; width:64%; padding:3% 18%;}
 
 /* Text Aligns */
 .TexAlCenter{ text-align:center;}
@@ -235,7 +236,9 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 .BoxSizeBorder{ box-sizing:border-box; -webkit-box-sizing:border-box; -moz-box-sizing:border-box;}
 
 /* Font Sizes */
-.Fs9{font-size:9px !important;} 
+.Fs7{font-size:7px !important;}
+.Fs8{font-size:8px !important;}
+.Fs9{font-size:9px !important;}
 .Fs10{font-size:10px !important;} 
 .Fs11{font-size:11px !important;} 
 .Fs12{font-size:12px !important;} 
@@ -431,15 +434,4 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	.Fs60{font-size:32px !important;}
 	.Fs100{font-size:35px !important;}
 	.Fs130{font-size:40px !important;}
-}
-
-/* clearfix for Container */
-.Container:before,.Container:after {
-	content: "";
-	display: table;
-	border-collapse: collapse;
-}
-
-.Container:after {
-    clear: both; 
 }
