--- a/showcase/modules/web-showcase/src/main/webapp/template/modena/layoutmenu.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/template/modena/layoutmenu.xhtml
@@ -92,7 +92,7 @@
         <p:menuitem id="rm_docs_28" value="Roboto Font" icon="fa fa-book" outcome="/docs/layout/roboto-font"/>
     </p:submenu>
 </p:submenu>
-<p:menuitem value="Yodlee" outcome="/pages/consumer/aggr/start.xhtml?lid=64"/>
+<p:menuitem value="Yodlee" outcome="/pages/consumer/aggr/start.xhtml"/>
 <p:separator/>
 </pm:menu>
 </h:form>
