--- a/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
@@ -18,7 +18,7 @@
                             actionListener="#{uiportal.doMenuAction('/consumer/cadd.xhtml?acct=0')}"/>
                 <p:menuitem value="Management" icon="fa fa-institution"
                             actionListener="#{uiportal.doMenuAction('https://www.clientam.com/Universal/servlet/AccountAccess.Login?partnerID=Invessence')}"/>
-                <p:menuitem value="Yodlee" icon="fa fa-plus-square"
+                <p:menuitem value="Account Aggregation" icon="fa fa-plus-square"
                             rendered="#{uiportal.hasAccessMenu('USER')}"
                             actionListener="#{yodleeBean.startup}"/>
                 <p:menuitem value="Change Account Info"
