--- a/ltam/modules/web/src/main/webapp/resources/modena-layout/css/modena-layout.css
+++ b/ltam/modules/web/src/main/webapp/resources/modena-layout/css/modena-layout.css
@@ -28,13 +28,6 @@
 .FontRobotoMedium {
   font-family: 'robotomedium';
 }
-
-.FontThemeBold{font-family: 'ralewaybold'; font-weight: bold;}
-.FontThemeSemiBold{font-family: 'robotoregular'; font-weight: bold;}
-.FontThemeMedium{font-family: 'robotomedium';}
-.FontThemeRegular{font-family: 'robotoregular';}
-.FontThemeLight{font-family: 'robotolight';}
-
 /*BODY*/
 html {
   height: 100%;
@@ -57,7 +50,7 @@ body {
   background-image: none;
 }
 .GrayModena #layout-topbar {
-  background-color: #37474F;
+  background-color: #FAFAFA;
 }
 /* Blue Theme*/
 .BlueModena.Geometry {
@@ -211,9 +204,11 @@ body {
   display: inline-block;
 }
 #logo img {
-  height: 25px;
-  margin: 8px 0px 0px 10px;
+    height: 40px;
+    margin-left: 10px;
+    /*margin: 5px 5px 5px 15px;*/
 }
+
 /* top menu */
 #top-menu {
   margin: 0px;
@@ -537,14 +532,27 @@ body {
 .menu-level-3 {
   text-indent: 60px;
 }
-
-
 /*Layout Portlets Cover*/
 #layout-portlets-cover {
   display: block;
   vertical-align: top;
   padding: 70px 1% 10px;
 }
+
+.layout-portlets-box{
+    width:97%; padding:1% 1.5%; margin:8px auto; overflow: hidden; float:left;
+    background-color:#F6FAFC/*#F1F6F9*/;
+    border-radius:3px; -webkit-border-radius:3px; -moz-border-radius:3px;
+    -webkit-box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
+    -moz-box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
+    box-shadow: 0px 1px 0px 0px rgba(159,172,183,0.7);
+}
+
+.other-pages-box{
+    overflow: hidden; background-color:#F6FAFC; border-radius:3px;
+    -webkit-border-radius:3px; -moz-border-radius:3px;
+}
+
 .Card {
   padding: 20px;
   display: block;
