--- a/ltam/modules/web/src/main/webapp/resources/modena-layout/css/core-layout.css
+++ b/ltam/modules/web/src/main/webapp/resources/modena-layout/css/core-layout.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6{ margin:0px !important;}
 /*visibilities according to the platform*/
 .ShowOnMobile{ display:none;}
 .ShowOnDesktop{ display:inherit;}
+.ShowOnDesktopTablet{ display:inherit;}
 .FloatNoneOnMobile{}
 
 .show{display:block !important;}
@@ -270,6 +271,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	/*visibilities according to the platform*/
 	.ShowOnMobile{display:none; opacity:0;}
 	.ShowOnDesktop{display:inherit; opacity:1;}
+    .ShowOnDesktopTablet{display:inherit; opacity:1;}
 }
  
 @media (min-width: 960px) and (max-width:1200px){
@@ -288,6 +290,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	/*visibilities according to the platform*/
 	.ShowOnMobile{display:inherit; opacity:1;}
 	.ShowOnDesktop{display:none; opacity:0;}
+    .ShowOnDesktopTablet{display:inherit; opacity:1;}
     .FloatNoneOnMobile{float:none !important;}
 	
 	/* responsive support */
@@ -332,6 +335,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	/*visibilities according to the platform*/
 	.ShowOnMobile{display:inherit; opacity:1;}
 	.ShowOnDesktop{display:none; opacity:0;}
+    .ShowOnDesktopTablet{display:inherit; opacity:1;}
     .FloatNoneOnMobile{float:none !important;}
 	
 	/* responsive support */
@@ -378,6 +382,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 	/*visibilities according to the platform*/
 	.ShowOnMobile{display:inherit; opacity:1;}
 	.ShowOnDesktop{display:none; opacity:0;}
+    .ShowOnDesktopTablet{display:none; opacity:0;}
     .FloatNoneOnMobile{float:none !important;}
 	
 	/* responsive support */
