--- a/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
@@ -22,7 +22,13 @@
             <i class="icon-more_vert" id="active"></i>
             <i class="icon-close DispNone" id="passive"></i>
         </a>
-        
+
+        <ul id="top-menu">
+            <li>
+                <a href="j_spring_security_logout"><span class="Red"><i class="icon-vpn_key Fs30 DispBlock"></i> Logout</span></a>
+            </li>
+        </ul>
+
     </div>
     <!-- TOPBAR END -->
     
