--- a/ltam/modules/web/src/main/webapp/template/html/welcome.htm
+++ b/ltam/modules/web/src/main/webapp/template/html/welcome.htm
@@ -171,11 +171,11 @@
 
                             </p>
                             <ol>
-                                <li>Enter your Userid.</li>
-                                <li>Enter your new password.</li>
+                                <li>Enter your User ID.</li>
+                                <li>Enter your new Password.</li>
                                 <li>Re-enter your new password to confirm it.</li>
                                 <li>Click "Next".</li>
-                                <li>Choose three questions and answers</li>
+                                <li>Choose three questions and answers.</li>
                                 <li>Click "Next".</li>
                                 <li>Lastly, follow instruction to activate the account.</li>
                             </ol>
