--- a/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
@@ -19,16 +19,16 @@
                 <p:menuitem value="Management" icon="fa fa-institution"
                             actionListener="#{uiportal.doMenuAction('https://www.clientam.com/Universal/servlet/AccountAccess.Login?partnerID=Invessence')}"/>
                 <p:menuitem value="Account Aggregation" icon="fa fa-plus-square"
-                            rendered="#{uiportal.hasAccessMenu('USER')}"
+                            rendered="#{uiportal.hasAccessMenu('DEMO')}"
                             actionListener="#{yodleeBean.startup}"/>
                 <p:menuitem value="Change Account Info"
-                            rendered="#{uiportal.hasAccessMenu('USER')}"
+                            rendered="#{uiportal.hasAccessMenu('DEMO')}"
                             outcome="/pages/consumer/cto/acctchange.xhtml"/>
             </p:submenu>
 
-            <p:separator rendered="#{uiportal.hasAccessMenu('USER')}"/>
+            <p:separator rendered="#{uiportal.hasAccessMenu('DEMO')}"/>
 
-            <p:menuitem value="Reports" icon="fa fa-picture-o" rendered="#{uiportal.hasAccessMenu('USER')}"
+            <p:menuitem value="Reports" icon="fa fa-picture-o" rendered="#{uiportal.hasAccessMenu('DEMO')}"
                         actionListener="#{uiportal.doMenuAction('/consumer/creports.xhtml')}"/>
 
             <p:separator rendered="#{uiportal.hasAccessMenu('ADVISOR')}"/>
