--- a/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/common/topbar.xhtml
@@ -3,7 +3,8 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:p="http://primefaces.org/ui">
     
     
     <!-- TOPBAR START -->
@@ -18,37 +19,26 @@
                             library="#{uiLayout.uiprofile.logolib}" />
         </a>
 
-        <a id="show-top-menu" class="ShowOnMobile ripplelink black">
+        <a id="show-top-menu" class="ShowOnMobile ripplelink black SymbilGreen">
             <i class="icon-more_vert" id="active"></i>
             <i class="icon-close DispNone" id="passive"></i>
         </a>
 
-        <ul id="top-menu">
-            <li>
-                <a class="ripplelink"><i class="icon-archive"></i> <span class="ShowOnMobile">Task Manager</span></a>
-                <ul>
-                    <li><a href="#"><i class="icon-alarm_on"></i> Completed Tasks</a></li>
-                    <li><a href="#"><i class="icon-alarm_add"></i> New Tasks</a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="ripplelink"><i class="icon-notifications_none"></i> <span class="ShowOnMobile">Notifications</span></a>
-                <ul>
-                    <li><a href="#"><span class="Orange">Meeting With John</span><br/><span class="Gray Fs14 FontRobotoLight">Today - 13:40 <br/>At Creme Cafe - NYC</span></a></li>
-                    <li><a href="#"><span class="Blue">Send Reports</span><br/><span class="Gray Fs14 FontRobotoLight">Today - 17:10 <br/>To Brian Carpenter</span></a></li>
-                    <li><a href="#"><span class="Blue">Test Week</span><br/><span class="Gray Fs14 FontRobotoLight">Today - 18:30 <br/>Testing New Modules</span></a></li>
-                    <li class="TexAlCenter"><i class="icon-keyboard_control Gray Fs30"></i></li>
-                    <li><a href="#"><span class="Red"><i class="icon-alarm_add Fs20 Fleft"></i> Set New Reminder</span></a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="ripplelink"><i class="icon-cog"></i> <span class="ShowOnMobile">Settings</span></a>
-                <ul>
-                    <li><a href="#"><i class="icon-verified_user"></i> Security Settings</a></li>
-                    <li><a href="#"><i class="icon-assignment_ind"></i> Users Settings</a></li>
-                </ul>
-            </li>
-        </ul>
+        <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
+            <ul id="top-menu">
+                <li>
+                    <a href="/pages/common/myprofile.xhtml">
+                        <i class="icon-cog SymbilBlue"></i><span class="ShowOnMobile">Settings</span>
+                    </a>
+                </li>
+                <li>
+                    <p:commandLink id="ajax" styleClass="SymbilRed" actionListener="#{uiLayout.logout}">
+                        <i class="icon-lock_open"></i> Sign-off
+                    </p:commandLink>
+                </li>
+
+            </ul>
+        </ui:fragment>
 
     </div>
     <!-- TOPBAR END -->
