--- a/ltam/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/ltam/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -198,3 +198,33 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 {
     width: 80px !important;
 }
+
+.dataTableRight {
+    text-align: right !important;
+}
+
+/* Media */
+/* Portrait phones and down */
+@media (min-width: 320px) and (max-width: 480px) {
+    .dataTableRight {
+        text-align: left !important;
+    }
+}
+/* for landscape phones */
+@media (min-height: 320px) and (max-height: 560px) {
+    .dataTableRight {
+        text-align: left !important;
+    }
+}
+
+/* for landscape phones */
+@media (min-height: 560px) and (max-height: 960px) {
+    .dataTableRight {
+        text-align: right !important;
+    }
+}
+
+
+
+
+
